# Bamboozler

./: Dockerfile  LICENSE  README.md  conda_setup.sh  docker_run.sh  environment.yml  pyproject.toml  test_docker_image.sh
BamBoozler/: BamGenerator.py  GenomeAnnotator.py  ReferenceDownloader.py  VariantSimulator.py  cli.py  logging_config.py  utils.py
tests/: investigate_image.sh
