[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BamBoozler"
version = "0.3.0"
description = "A lightweight Python package for reference genome processing, BAM generation, and variant simulation."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["bioinformatics", "BAM", "genome", "variant", "pyfaidx", "samtools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests",      # For HTTP downloads
  "pyfaidx",       # For indexing/slicing compressed FASTA
  "biopython",     # If used for annotation or sequence manipulation
  "pandas",        # For structured data handling (e.g., VCF parsing)
  "pyyaml",        # For YAML-based tool parameter files
  "pysam",         # Required for BAM file handling
  "refgenconf",    # For reference genome metadata
  "gffutils",      # For parsing GFF/GTF annotations
  "pybedtools",    # For handling genomic intervals in BED files
  "vcfpy"          # For parsing VCF files
]

[project.optional-dependencies]
tools = [
  "neat @ git+https://github.com/ncsa/NEAT.git",
  "varsim @ git+https://github.com/bioinform/varsim.git",
  "bamsurgeon @ git+https://github.com/adamewing/bamsurgeon.git"
]
bioinformatics = [
  "samtools",      # Required for BAM operations
  "wgsim",         # Read simulator
  "bwa",           # Aligner
  "picard",        # Tools for BAM manipulation
  "exonerate",     # Required for sequence alignment
  "velvet"         # De novo assembly tool
]

[project.scripts]
bamboozler = "BamBoozler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["BamBoozler*"]
exclude = ["notes*", "tests*"]

